# CICIoT2023-FL-IDS

./: .gitignore  README.md  REPRODUCIBILITY.md  experiment_log.md  pyproject.toml  requirements.txt  results_interpretation.md  sync_to_cluster.sh
doc/archive/: Dataset_Comparison_Analysis.docx
doc/long_term_framework/: CA_FedDef_Experiments.docx  CA_FedDef_Framework.docx  Summary of proposed documents.docx  ca_feddef_execution_roadmap_early_plan.docx
doc/working_memos/: Research_Context_till_ML.docx
eda_outputs/: 01_EDA.ipynb  02_Preprocessing.ipynb  03_Baseline_ML.ipynb  04_Baseline_DL.ipynb  05_Class_Balancing.ipynb  06_Balancing_Multiclass.ipynb  07_Baseline_Multiclass_ML.ipynb  08_Baseline_Multiclass_DL.ipynb  experiment_log_07_ml_baseline.json  experiment_log_08_dl_baseline.json
experiments/stage2_fl/: README.md
extracted/: cat8_mapping.json  feature_columns.json  split_summary.json
models/binary/: cnn_best.keras  (+3 more)
notes/: Research_Context_till_ML.docx
scripts/: 01_eda.py  02_preprocess.py  03_balance.py  04_train_binary_ml.py  05_train_binary_dl.py  06_train_multiclass_ml.py  07_train_multiclass_dl.py  08_fedavg.py  09_summarize_fedavg_multiseed.py  10_plot_fedavg_convergence.py  11_plot_partition_heatmaps.py  12_fedprox.py
slurm/: env_setup.sh  run_03_balance.sh  run_04_binary_ml.sh  run_05_binary_dl.sh  run_06_multiclass_ml.sh  run_07_multiclass_dl.sh  run_08_fedavg_dirichlet_01.sh  run_08_fedavg_dirichlet_03.sh  run_08_fedavg_iid.sh  run_08_fedavg_multiseed_array.sh  run_12_fedprox_remaining_multiseed_array.sh  run_12_fedprox_smoke_iid_seed123.sh
(+56 files in other folders)
